[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pxconvert"
version = "0.1.0"
description = "PX file converter with Azure Blob streaming support"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["px", "pybind11", "azure", "blob", "converter"]
