[build-system]
requires = ["setuptools>=64", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "px2csv"
version = "1.0.0"
description = "Fast and memory-efficient PX to CSV converter"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kusti Aholainen" }]
